--- a/docs/content/development/index.mdx
+++ b/docs/content/development/index.mdx
@@ -127,7 +127,7 @@ print(f"Expected: {test.expected_behavior}")`}
 
 services:
 postgres:
-image: mirror.gcr.io/pgvector/pgvector:pg16
+image: pgvector/pgvector:pg16
 environment:
 POSTGRES_DB: your_database
 POSTGRES_USER: your_username
