refactor: rename model config vars for clarity
Rename DEFAULT_GENERATION_MODEL → DEFAULT_LANGUAGE_MODEL_PROVIDER and DEFAULT_MODEL_NAME → DEFAULT_LANGUAGE_MODEL_NAME across all services

--- a/docs/content/development/environment-variables.mdx
+++ b/docs/content/development/environment-variables.mdx
@@ -47,8 +47,8 @@ Create a `.env` file in `apps/backend/` with the following variables:
     ['`AZURE_OPENAI_API_VERSION`', 'Default: `2024-10-21`', 'Azure OpenAI API version'],
     ['`GEMINI_API_KEY`', 'Optional', 'Google Gemini API key. Obtain from Google AI Studio'],
     ['`GEMINI_MODEL_NAME`', 'Default: `gemini-2.0-flash`', 'Google Gemini model name'],
-    ['`DEFAULT_GENERATION_MODEL`', 'Default: `vertex_ai`', 'Default AI provider for test generation'],
-    ['`DEFAULT_MODEL_NAME`', 'Default: `gemini-2.0-flash`', 'Default model name for generation'],
+    ['`DEFAULT_LANGUAGE_MODEL_PROVIDER`', 'Default: `vertex_ai`', 'Default AI provider for test generation'],
+    ['`DEFAULT_LANGUAGE_MODEL_NAME`', 'Default: `gemini-2.0-flash`', 'Default model name for generation'],
     ['`GOOGLE_APPLICATION_CREDENTIALS`', 'Optional', 'Path to Google Cloud service account credentials JSON file'],
     ['`VERTEX_AI_LOCATION`', 'Optional', 'Google Cloud Vertex AI location/region. Format: `us-central1`, `europe-west1`, etc.'],
     ['`VERTEX_AI_PROJECT`', 'Optional', 'Google Cloud project ID for Vertex AI'],
@@ -164,8 +164,8 @@ The worker service processes background tasks using Celery. Configure environmen
     ['`GOOGLE_APPLICATION_CREDENTIALS`', 'Optional', 'Path to Google Cloud service account credentials JSON file'],
     ['`VERTEX_AI_LOCATION`', 'Optional', 'Google Cloud Vertex AI location/region'],
     ['`VERTEX_AI_PROJECT`', 'Optional', 'Google Cloud project ID for Vertex AI'],
-    ['`DEFAULT_GENERATION_MODEL`', 'Default: `vertex_ai`', 'Default AI provider for test generation'],
-    ['`DEFAULT_MODEL_NAME`', 'Default: `gemini-2.0-flash`', 'Default model name for generation'],
+    ['`DEFAULT_LANGUAGE_MODEL_PROVIDER`', 'Default: `vertex_ai`', 'Default AI provider for test generation'],
+    ['`DEFAULT_LANGUAGE_MODEL_NAME`', 'Default: `gemini-2.0-flash`', 'Default model name for generation'],
     ['`STORAGE_SERVICE_URI`', 'Optional', 'Storage service endpoint URL for file operations'],
     ['`STORAGE_SERVICE_ACCOUNT_KEY`', 'Optional', 'Storage service account key or access token'],
     ['`LOCAL_STORAGE_PATH`', 'Optional', 'Local filesystem path for file storage'],
