--- a/docs/content/platform/endpoints/single-turn.mdx
+++ b/docs/content/platform/endpoints/single-turn.mdx
@@ -239,7 +239,7 @@ in the endpoint settings. See the
 With this configuration, when Rhesis sends a test prompt like "What is machine
 learning?", it formats the request, sends it to your API, extracts the response
 text from `choices[0].message.content`, and evaluates it against your configured
-metrics.
+metrics. Usage metadata is stored alongside the test result for reference.
 
 ---
 
