fix: remove escaped curly braces in MDX style attributes
MDX requires unescaped curly braces for JSX expressions. The escaped braces were causing build failures.

--- a/docs/content/development/changelog.mdx
+++ b/docs/content/development/changelog.mdx
@@ -20,22 +20,11 @@ This release includes the following component versions:
 
 ### Video Overview
 
-<div style=\{\{ position: 'relative', paddingBottom: '56.25%', height: 0, overflow: 'hidden', maxWidth: '800px', margin: '20px 0', borderRadius: '8px', boxShadow: '0 4px 6px rgba(0, 0, 0, 0.1)' \}\}>
+<div style={{ position: 'relative', paddingBottom: '56.25%', height: 0, overflow: 'hidden', maxWidth: '800px', margin: '20px 0', borderRadius: '8px', boxShadow: '0 4px 6px rgba(0, 0, 0, 0.1)' }}>
   <iframe
-    style=\{\{ position: 'absolute', top: 0, left: 0, width: '100%', height: '100%' \}\}
+    style={{ position: 'absolute', top: 0, left: 0, width: '100%', height: '100%' }}
     src="https://www.youtube.com/embed/vdbWfqhQpZs"
     title="Now live: Metrics per Run + Output re-runs | Rhesis AI"
-    frameBorder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowFullScreen
-  />
-</div>
-
-<div style=\{\{ position: 'relative', paddingBottom: '56.25%', height: 0, overflow: 'hidden', maxWidth: '800px', margin: '20px 0', borderRadius: '8px', boxShadow: '0 4px 6px rgba(0, 0, 0, 0.1)' \}\}>
-  <iframe
-    style=\{\{ position: 'absolute', top: 0, left: 0, width: '100%', height: '100%' \}\}
-    src="https://www.youtube.com/embed/OH7e_7q7_oU"
-    title="Multi-Agent Workflow Testing & Observability | Rhesis AI v0.6.4"
     frameBorder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowFullScreen
@@ -95,12 +84,10 @@ Replaced Auth0 with a comprehensive native authentication solution:
 ### Frontend Highlights
 - Added split-view playground with test creation from conversations, including drawer with LLM-extracted pre-filled fields
 - Implemented file import for test sets with column mapping and user-friendly error handling
-- Added user-configurable embedding model settings with connection testing
 - Introduced test output reuse and re-scoring capabilities with "Scoring Target" dropdown
 - Replaced Auth0 with native authentication system including email verification, password reset, magic link, and OAuth support
 
 ### SDK Highlights
-- Introduced split-view playground with test creation from conversations
 - Added file import for test sets and flat convenience fields for multi-turn test configurations
 - Added rescore, last_run, and metric management capabilities to TestSet
 - Implemented user-configurable embedding model settings and improved model connection testing
@@ -120,6 +107,19 @@ This release includes the following component versions:
 - **Backend 0.6.2**
 - **Frontend 0.6.3**
 - **SDK 0.6.3**
+
+### Video Overview
+
+<div style={{ position: 'relative', paddingBottom: '56.25%', height: 0, overflow: 'hidden', maxWidth: '800px', margin: '20px 0', borderRadius: '8px', boxShadow: '0 4px 6px rgba(0, 0, 0, 0.1)' }}>
+  <iframe
+    style={{ position: 'absolute', top: 0, left: 0, width: '100%', height: '100%' }}
+    src="https://www.youtube.com/embed/OH7e_7q7_oU"
+    title="Multi-Agent Workflow Testing & Observability | Rhesis AI v0.6.4"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+  />
+</div>
 
 ### Summary
 
@@ -170,8 +170,6 @@ Improved observability with new visualization capabilities:
 - Improved UI/UX with validation improvements and dark mode adjustments
 
 ### SDK Highlights
-- Added interactive playground support with WebSocket communication
-- Enhanced trace visualization with Graph View and agent tracing support
 - Introduced JSON and JSONL import/export methods for TestSets
 - Improved WebSocket robustness with enhanced retry mechanism
 - Fixed several SDK test issues for improved reliability
