docs: move multi-agent video from v0.6.4 to v0.6.3 section (#1361)
* fix: remove escaped curly braces in changelog.mdx video embeds

MDX requires unescaped curly braces for JSX expressions. The escaped braces cause build failures with 'Unexpected character' errors.

* docs: move multi-agent video from v0.6.4 to v0.6.3 section

The "Multi-Agent Workflow Testing & Observability" video is more relevant to v0.6.3 which introduced the Interactive Playground, Jira Integration, and Enhanced Trace Visualization features. The v0.6.4 release focuses on split-view playground, file import, and output reuse capabilities.

* fix: update video iframe title to reference v0.6.3

The video was moved to the v0.6.3 section but the iframe title still referenced v0.6.4. Updated for consistency.

--- a/docs/content/development/changelog.mdx
+++ b/docs/content/development/changelog.mdx
@@ -31,17 +31,6 @@ This release includes the following component versions:
   />
 </div>
 
-<div style={{ position: 'relative', paddingBottom: '56.25%', height: 0, overflow: 'hidden', maxWidth: '800px', margin: '20px 0', borderRadius: '8px', boxShadow: '0 4px 6px rgba(0, 0, 0, 0.1)' }}>
-  <iframe
-    style={{ position: 'absolute', top: 0, left: 0, width: '100%', height: '100%' }}
-    src="https://www.youtube.com/embed/OH7e_7q7_oU"
-    title="Multi-Agent Workflow Testing & Observability | Rhesis AI v0.6.4"
-    frameBorder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowFullScreen
-  />
-</div>
-
 ### Summary
 
 This release introduces **split-view playground with test creation**, **file import for test sets**, **test output reuse and re-scoring**, and a **native authentication system** replacing Auth0. The platform now supports CSV, JSON, JSONL, and Excel file imports with intelligent column mapping, while the new re-scoring capability enables metric evaluation on stored outputs without re-invoking endpoints.
@@ -120,6 +109,19 @@ This release includes the following component versions:
 - **Backend 0.6.2**
 - **Frontend 0.6.3**
 - **SDK 0.6.3**
+
+### Video Overview
+
+<div style={{ position: 'relative', paddingBottom: '56.25%', height: 0, overflow: 'hidden', maxWidth: '800px', margin: '20px 0', borderRadius: '8px', boxShadow: '0 4px 6px rgba(0, 0, 0, 0.1)' }}>
+  <iframe
+    style={{ position: 'absolute', top: 0, left: 0, width: '100%', height: '100%' }}
+    src="https://www.youtube.com/embed/OH7e_7q7_oU"
+    title="Multi-Agent Workflow Testing & Observability | Rhesis AI v0.6.3"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+  />
+</div>
 
 ### Summary
 
