--- a/docs/content/development/environment-variables.mdx
+++ b/docs/content/development/environment-variables.mdx
@@ -47,8 +47,9 @@ Create a `.env` file in `apps/backend/` with the following variables:
     ['`AZURE_OPENAI_API_VERSION`', 'Default: `2024-10-21`', 'Azure OpenAI API version'],
     ['`GEMINI_API_KEY`', 'Optional', 'Google Gemini API key. Obtain from Google AI Studio'],
     ['`GEMINI_MODEL_NAME`', 'Default: `gemini-2.0-flash`', 'Google Gemini model name'],
-    ['`DEFAULT_GENERATION_MODEL`', 'Default: `vertex_ai/gemini-2.0-flash`', 'Default model for test generation (format: provider/model_name)'],
-    ['`DEFAULT_EVALUATION_MODEL`', 'Default: `vertex_ai/gemini-2.0-flash`', 'Default model for evaluation/language-model-as-a-judge (format: provider/model_name)'],
+    ['`RHESIS_API_KEY`', 'Optional', 'API key for Rhesis-hosted models. Required when `DEFAULT_GENERATION_MODEL` or `DEFAULT_EVALUATION_MODEL` is set to `rhesis/rhesis-default`. Get your key from https://app.rhesis.ai/'],
+    ['`DEFAULT_GENERATION_MODEL`', 'Default: `rhesis/rhesis-default`', 'Default model for test generation (format: provider/model_name). When set to `rhesis/rhesis-default`, requires `RHESIS_API_KEY`. Change to a third-party provider (e.g., `openai/gpt-4o`, `gemini/gemini-2.0-flash`) if not using a Rhesis API key'],
+    ['`DEFAULT_EVALUATION_MODEL`', 'Default: `rhesis/rhesis-default`', 'Default model for evaluation/language-model-as-a-judge (format: provider/model_name). When set to `rhesis/rhesis-default`, requires `RHESIS_API_KEY`. Change to a third-party provider (e.g., `openai/gpt-4o`, `gemini/gemini-2.0-flash`) if not using a Rhesis API key'],
     ['`DEFAULT_EMBEDDING_MODEL`', 'Default: `vertex_ai/text-embedding-005`', 'Default model for embeddings (format: provider/model_name)'],
     ['`GOOGLE_APPLICATION_CREDENTIALS`', 'Optional', 'Path to Google Cloud service account credentials JSON file'],
     ['`VERTEX_AI_LOCATION`', 'Optional', 'Google Cloud Vertex AI location/region. Format: `us-central1`, `europe-west1`, etc.'],
@@ -165,8 +166,8 @@ The worker service processes background tasks using Celery. Configure environmen
     ['`GOOGLE_APPLICATION_CREDENTIALS`', 'Optional', 'Path to Google Cloud service account credentials JSON file'],
     ['`VERTEX_AI_LOCATION`', 'Optional', 'Google Cloud Vertex AI location/region'],
     ['`VERTEX_AI_PROJECT`', 'Optional', 'Google Cloud project ID for Vertex AI'],
-    ['`DEFAULT_GENERATION_MODEL`', 'Default: `vertex_ai/gemini-2.0-flash`', 'Default model for test generation (format: provider/model_name)'],
-    ['`DEFAULT_EVALUATION_MODEL`', 'Default: `vertex_ai/gemini-2.0-flash`', 'Default model for evaluation (format: provider/model_name)'],
+    ['`DEFAULT_GENERATION_MODEL`', 'Default: `rhesis/rhesis-default`', 'Default model for test generation (format: provider/model_name). When set to `rhesis/rhesis-default`, requires `RHESIS_API_KEY`. Change to a third-party provider (e.g., `openai/gpt-4o`, `gemini/gemini-2.0-flash`) if not using a Rhesis API key'],
+    ['`DEFAULT_EVALUATION_MODEL`', 'Default: `rhesis/rhesis-default`', 'Default model for evaluation (format: provider/model_name). When set to `rhesis/rhesis-default`, requires `RHESIS_API_KEY`. Change to a third-party provider (e.g., `openai/gpt-4o`, `gemini/gemini-2.0-flash`) if not using a Rhesis API key'],
     ['`DEFAULT_EMBEDDING_MODEL`', 'Default: `vertex_ai/text-embedding-005`', 'Default model for embeddings (format: provider/model_name)'],
     ['`STORAGE_SERVICE_URI`', 'Optional', 'Storage service endpoint URL for file operations'],
     ['`STORAGE_SERVICE_ACCOUNT_KEY`', 'Optional', 'Storage service account key or access token'],
